@@ -1,7 +1,9 @@
 libplist (1.1-1) UNRELEASED; urgency=low
 
   * New upstream release.
-  * debian/rules & debian/control: Add quilt support.
+  * debian/rules 
+   - Rewrite to use dh7 and quilt.
+  * debian/control: Add quilt support.
   * debian/01-libs.private.patch: Use Libs.private in *.pc files to not add
     unecessary links.
   * debian/02-fix-test.patch: From upstream (54f1ffb0...), fix test suit.
